--- a/style.css
+++ b/style.css
@@ -1,37 +1,37 @@
 body {
 font-family: sans-serif;
 }
-.paragraph {
+.text {
     font-size: 16px;
     line-height: 26px;
     color: #1F3F68;
 }
-.heading-1 {
+.top__heading {
     font-size: 64px;
     color: #1F3F68;
 }
-.heading-2 {
+.heading-contacts {
     font-weight: 500;
     font-size: 44px;
     text-align: center;
 }
-.heading-3 {
+.heading {
     font-size: 36px;
     text-align: center;
 }
-.heading-4 {
+.heading-mini {
     font-size: 20px;
     line-height: 30px;
     color: #1F3F68;
 }
-.input {
+.input-text {
     border: 1px solid #356EAD;
     box-sizing: border-box;
     border-radius: 10px;
     opacity: 0.4;
 
 }
-.submit {
+.button-submit {
     background: #5A98D0;
     box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
     border-radius: 10px;
