--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+.container {
+    width: 1140px;
+    margin: 0 auto;
+}
 body {
 font-family: sans-serif;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+}
+.top__text {
+    width: 425px;
 }
 .text {
     font-size: 16px;
@@ -7,6 +23,7 @@ font-family: sans-serif;
     color: #1F3F68;
 }
 .top__heading {
+    width: 510px;
     font-size: 64px;
     color: #1F3F68;
 }
@@ -19,6 +36,13 @@ font-family: sans-serif;
     font-size: 36px;
     text-align: center;
 }
+.card-block {
+    display: flex;
+    justify-content: space-between;
+}
+.card {
+    width: 359px;
+}
 .heading-mini {
     font-size: 20px;
     line-height: 30px;
@@ -29,7 +53,6 @@ font-family: sans-serif;
     box-sizing: border-box;
     border-radius: 10px;
     opacity: 0.4;
-
 }
 .button-submit {
     background: #5A98D0;
@@ -41,4 +64,14 @@ font-family: sans-serif;
     text-align: center;
     color: #FFFFFF;
     text-transform: uppercase;
+}
+.footer__text {
+    width: 495px;
+}
+.footer__heading {
+    width: 340px;
+}
+.footer__info {
+    display: flex;
+    justify-content: space-between;
 }
