--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ font-family: sans-serif;
     display: flex;
     justify-content: space-between;
 }
-.contacts-form {
+.main {
     display: flex;
-    justify-content: space-around;
 }
