--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+.top {
+    height: 768px;
+    background: linear-gradient(0deg, #EBF3FB 8.84%, rgba(152, 195, 232, 0) 31.12%);
+}
 .container {
     width: 1140px;
     margin: 0 auto;
@@ -9,10 +13,16 @@
 body {
 font-family: sans-serif;
 }
+.top-box {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
 .header {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
+    padding-top: 42px;
 }
 .top__text {
     width: 425px;
@@ -20,12 +30,39 @@ font-family: sans-serif;
 .text {
     font-size: 16px;
     line-height: 26px;
+    letter-spacing: 0.05em;
     color: #1F3F68;
+    opacity: 0.6;
+}
+.top__info {
+    padding-top: 115px;
+    flex-grow: 1;
+    background-image: url(img/top__bg.png);
+    background-repeat: no-repeat;
+    background-position: right center;
 }
 .top__heading {
-    width: 510px;
+    width: 504px;
+    font-weight: 300;
     font-size: 64px;
+    line-height: 74px;
+    letter-spacing: 0.04em;
     color: #1F3F68;
+    margin-bottom: 32px;
+    }
+.top__button {
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    background: #5A98D0;
+    box-shadow: 5px 10px 20px rgba(53, 110, 173, 0.2);
+    border-radius: 10px;
+    text-decoration: none;
+    padding: 15px 50px;
+    display: inline-block;
+    margin-top: 71px;
 }
 .heading-contacts {
     font-weight: 500;
